--- a/index.html
+++ b/index.html
@@ -6,20 +6,20 @@
     <link rel="stylesheet" href="assets/css/index.css">
     <link rel="stylesheet" href="	https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" rel="stylesheet">
-
+    <link rel="shortcut icon" href="assets/img/logo portfolio.jpeg" />
     <title>Portfolio Andrea Ruzittu</title>
 </head>
 <body>
     <header class="d-flex justify-content-between align-items-center  bg-light p-2">
         <div class="d-flex align-items-center pe-4">
             <!-- Logo del Portfolio -->
-            <img src="assets/img/logo portfolio.jpeg" alt="Logo" id="logo" class="logo me-3">
+            <img src="assets/img/logo portfolio.jpeg"  alt="Logo" id="logo" class="logo me-3">
             <!-- Link ai Social e Bottone Download CV -->
-            <a href="https://www.linkedin.com/in/andrea-ruzittu-575633262/" class="me-2" target="_blank"><i class="fab fa-linkedin fa-lg"></i></a>
+            <a href="https://www.linkedin.com/in/andrea-ruzittu-575633262/" target="_blank" class="me-2" target="_blank"><i class="fab fa-linkedin fa-lg"></i></a>
             <a href="https://github.com/Andrearuz97" class="me-2" target="_blank"><i class="fab fa-github fa-lg"></i></a>
             <a href="https://facebook.com/tuonome" class="me-2" target="_blank"><i class="fa-brands fa-facebook fa-lg"></i></a>
             
-            <a href="assets/file/CV Andrea Ruzittu 2023.pdf" title="Download cv" ><i class="fa-solid fa-download fa-lg"></i></a>
+            <a href="assets/file/CV Andrea Ruzittu 2023.pdf" target="_blank" title="Download cv" ><i class="fa-solid fa-download fa-lg"></i></a>
         </div>
 
         <div class="d-flex align-items-center">
@@ -130,7 +130,7 @@ Andrea Ruzittu</p>
             <div class="card" style="width: 18rem;">
               <img src="assets/img/favicon_ER.jpeg" class="card-img-top" alt="...">
               <div class="card-body">
-                <h5 class="card-title">Card title</h5>
+                <h5 class="card-title">Easy-reservation</h5>
                 <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                 <a href="https://github.com/Andrearuz97/EasyReservation-Angular" class="btn btn-primary">Vedi progetto</a>
               </div>
