--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
             <!-- Sezione "Chi Sono" -->
             <div class="col-md-6">
                 <h2 class="text-center">About Me</h2>
-                <p id="aboutMe" class="text-center">Ciao, sono Andrea. Dopo una laurea in Economia, ho iniziato a lavorare nell'amministrazione di una catena alberghiera, acquisendo competenze in gestione e servizio clienti. La mia passione per la tecnologia mi ha poi portato a frequuentare un bootcamp di programmazione, dove mi sono specializzato in sviluppo web Full Stack. Oggi, integro la mia comprensione del business con le competenze tecniche per sviluppare soluzioni web innovative, sempre con un occhio al continuo apprendimento e alla collaborazione.</p>
+                <p id="aboutMe" class="text-center">Ciao, sono Andrea. Dopo una laurea in Economia, ho iniziato a lavorare nell'amministrazione di una catena alberghiera, acquisendo competenze in gestione e servizio clienti. La mia passione per la tecnologia mi ha poi portato a frequentare un bootcamp di programmazione, dove mi sono specializzato in sviluppo web Full Stack. Oggi, integro la mia comprensione del business con le competenze tecniche per sviluppare soluzioni web innovative, sempre con un occhio al continuo apprendimento e alla collaborazione.</p>
             </div>
 
             <!-- Sezione Competenze -->
@@ -137,7 +137,7 @@
                                 <img src="assets/img/favicon_ER.jpeg" class="card-img-top" alt="Project 1">
                                 <div class="card-body">
                                     <h5 class="card-title">Easy Reservation</h5>
-                                    <p class="card-text">Progetto Full-Stack con Angular & Java, necessita di un backend separato per funzionare, trovi tutto nel readmi.</p>
+                                    <p class="card-text">Progetto Full-Stack con Angular & Java, necessita di un backend separato per funzionare, trovi tutto nel README.</p>
                                     <a href="https://youtu.be/p28tBHYAr58?si=YxAASWc2p-5tnXDg" target="_blank" class="btn btn-primary">Visualizza Demo</a>
                                     <a href="https://github.com/Andrearuz97/EasyReservation-Angular" target="_blank"class="btn btn-secondary">Codice</a>
                                 </div>
