--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                     <!-- Link ai Social e Bottone Download CV -->
                     <a href="https://www.linkedin.com/in/andrea-ruzittu-575633262/" class="nav-link" target="_blank"><i class="fab fa-linkedin fa-lg"></i></a>
                     <a href="https://github.com/Andrearuz97" class="nav-link" target="_blank"><i class="fab fa-github fa-lg"></i></a>
-                    <a href="https://facebook.com/tuonome" class="nav-link" target="_blank"><i class="fa-brands fa-facebook fa-lg"></i></a>
+                    <a href="https://www.facebook.com/andrea.ruzittu.9/" class="nav-link" target="_blank"><i class="fa-brands fa-facebook fa-lg"></i></a>
                     <a href="assets/file/CV Andrea Ruzittu 2023.pdf" class="nav-link" target="_blank" title="Download cv" ><i class="fa-solid fa-download fa-lg"></i></a>
                 </div>
                 <div class="ms-auto d-flex align-items-center">
