--- a/index.html
+++ b/index.html
@@ -32,13 +32,15 @@
                     <a href="https://www.linkedin.com/in/andrea-ruzittu-575633262/" class="nav-link" target="_blank"><i class="fab fa-linkedin fa-lg"></i></a>
                     <a href="https://github.com/Andrearuz97" class="nav-link" target="_blank"><i class="fab fa-github fa-lg"></i></a>
                     <a href="https://www.facebook.com/andrea.ruzittu.9/" class="nav-link" target="_blank"><i class="fa-brands fa-facebook fa-lg"></i></a>
+                    <a href="https://www.instagram.com/andrea_ruzittu/" class="nav-link" target="_blank"><i class="fa-brands fa-instagram fa-lg"></i></a>
+                    <a href="https://twitter.com/Andrea_ruz97" class="nav-link" target="_blank"><i class="fa-brands fa-x-twitter fa-lg"></i></a>
                     <a href="assets/file/CV Andrea Ruzittu 2023.pdf" class="nav-link" target="_blank" title="Download cv" ><i class="fa-solid fa-download fa-lg"></i></a>
                 </div>
                 <div class="ms-auto d-flex align-items-center">
                     <!-- Selettore Lingua e Cambio Tema -->
                     <select class="form-select me-2" id="language-switcher">
-                        <option value="it">Italiano</option>
-                        <option value="en">English</option>
+                        <option value="it">IT</option>
+                        <option value="en">EN</option>
                     </select>
                     <button id="theme-switcher" class="btn"><i class="fa-regular fa-moon"></i></button>
                 </div>
@@ -207,7 +209,7 @@
                 <textarea class="form-control" id="message" name="message" rows="3" required></textarea>
             </div>
             <input type="hidden" name="_subject" value="Nuovo messaggio dal Portfolio!">
-            <button type="submit" class="btn btn-success">Inviami Messaggio</button>
+            <button type="submit" class="btn btn-success">Inviami un Messaggio</button>
         </form>
     </section>
 
