--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
                     <div class="row">
                         <div class="col-lg-12 col-md-12 col-12">
                             <div class="card mb-3">
-                                <img src="assets/img/Calclatrice.jpeg" class="card-img-top" alt="Project 1">
+                                <img src="assets/img/Calcolatrice.JPG" class="card-img-top" alt="Project 1">
                                 <div class="card-body">
                                     <h5 class="card-title">Calcolatrice con js </h5>
                                     <p class="card-text">Semplice calcolatrice realizzata in una sola giornata con del semplice HTML, CSS & JavaScript</p>
@@ -215,8 +215,8 @@
 
 
       
-    <footer class="contatti">
-        <section class="contatti text-justify">
+    <footer class="contatti text-justify">
+        <section class="contatti">
         <p>
             <a href="https://wa.me/393405567478" target="_blank">
                 <i class="fab fa-whatsapp"></i> Contattami su Whatsapp
