--- a/index.html
+++ b/index.html
@@ -56,8 +56,8 @@
             <option value="en">EN</option>
         </select>
         <button id="theme-switcher" class="btn">
-            <i class="fa-regular fa-moon"></i> <!-- Icona Luna -->
-            <i class="fa-regular fa-sun" style="display:none;"></i> <!-- Icona Sole -->
+            <i class="fa-solid fa-moon"></i> <!-- Icona Luna -->
+            <i class="fa-solid fa-sun" style="display:none;"></i> <!-- Icona Sole -->
         </button>
         
     </div>
@@ -100,16 +100,20 @@
                         <img class="skillLogo" src="assets/img/cssLogo.png" alt="CSS Logo">
                     </div>
                     <div class="skill-item text-center m-2">
+                        <p class="m-0 p-1 fs-5 fw-bold">SASS</p>
+                        <img class="skillLogo" src="assets/img/sass.svg" alt="SASS Logo">
+                    </div>
+                    <div class="skill-item text-center m-2">
                         <p class="m-0 p-1 fs-5 fw-bold">JavaScript</p>
                         <img class="skillLogo" src="assets/img/JavaScript-logo.png" alt="JavaScript Logo">
                     </div>
                     <div class="skill-item text-center m-2">
-                        <p class="m-0 p-1 fs-5 fw-bold">Bootstrap</p>
-                        <img class="skillLogo" src="assets/img/Bootstrap_logo.svg.png" alt="Bootstrap Logo">
-                    </div>
-                    <div class="skill-item text-center m-2">
                         <p class="m-0 p-1 fs-5 fw-bold">TypeScript</p>
                         <img class="skillLogo" src="assets/img/typescript logo.png" alt="TypeScript Logo">
+                    </div>
+                    <div class="skill-item text-center m-2">
+                        <p class="m-0 p-1 fs-5 fw-bold">Bootstrap</p>
+                        <img class="skillLogo" src="assets/img/Bootstrap_logo.svg.png" alt="Bootstrap Logo">
                     </div>
                     <div class="skill-item text-center m-2">
                         <p class="m-0 p-1 fs-5 fw-bold">Angular</p>
@@ -125,11 +129,11 @@
                     </div>
                     <div class="skill-item text-center m-2">
                         <p class="m-0 p-1 fs-5 fw-bold">Java</p>
-                        <img class="skillLogo" src="assets/img/Java-Emblem.jpg" alt="Java Logo">
+                        <img class="skillLogo" src="assets/img/java-svgrepo-com.svg" alt="Java Logo">
                     </div>
                     <div class="skill-item text-center m-2">
                         <p class="m-0 p-1 fs-5 fw-bold">Spring</p>
-                        <img class="skillLogo" src="assets/img/SpringLogo.png" alt="Spring Logo">
+                        <img class="skillLogo" src="assets/img/springLogo.png" alt="Spring Logo">
                     </div>
                     <div class="skill-item text-center m-2">
                         <p class="m-0 p-1 fs-5 fw-bold">PostgreSQL</p>
@@ -138,6 +142,14 @@
                     <div class="skill-item text-center m-2">
                         <p class="m-0 p-1 fs-5 fw-bold">Postman</p>
                         <img class="skillLogo" src="assets/img/postman.svg" alt="Postman Logo">
+                    </div>
+                    <div class="skill-item text-center m-2">
+                        <p class="m-0 p-1 fs-5 fw-bold">Git</p>
+                        <img class="skillLogo" src="assets/img/Git_icon.svg.png" alt="Git Logo">
+                    </div>
+                    <div class="skill-item text-center m-2">
+                        <p class="m-0 p-1 fs-5 fw-bold">GitHub</p>
+                        <img class="skillLogo" src="assets/img/githubLogo.svg" alt="GitHub Logo">
                     </div>
                 </div>
             </div>
