--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
                     </div>
                     <div class="skill-item text-center m-2">
                         <p class="m-0 p-1 fs-5 fw-bold">Spring</p>
-                        <img class="skillLogo" src="assets/img/springLogo.png" alt="Spring Logo">
+                        <img class="skillLogo" src="assets/img/springLogo.svg" alt="Spring Logo">
                     </div>
                     <div class="skill-item text-center m-2">
                         <p class="m-0 p-1 fs-5 fw-bold">PostgreSQL</p>
