--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
           />
         </div>
         <div class="col-md-6 text-center mt-3">
-          <h1 id="title">Hello, i'm Andrea Ruzittu</h1>
+          <h1 class="mb-4" id="title">Hello, i'm Andrea Ruzittu</h1>
           <h2 id="fullStack">FULL-STACK DEVELOPER</h2>
         </div>
       </div>
