--- a/index.html
+++ b/index.html
@@ -317,10 +317,10 @@
                     alt="Project 1"
                   />
                   <div class="card-body">
-                    <h5 class="card-title">Calcolatrice con js</h5>
+                    <h5 class="card-title">Calcolatrice scientifica</h5>
                     <p class="card-text">
-                      Semplice calcolatrice realizzata in una sola giornata con
-                      del semplice HTML, CSS & JavaScript
+                      Semplice modello di calcolatrice scientifica realizzata con
+                      HTML, CSS & JavaScript
                     </p>
                     <a
                       href="https://andrearuz97.github.io/Calcolatrice_js/"
@@ -362,6 +362,37 @@
                     >
                     <a
                       href="https://github.com/Andrearuz97/FS0223-Andrea-Ruzittu/tree/main/m2/sett%201/g5/progetto_settimana05"
+                      target="_blank"
+                      class="btn btn-warning"
+                      >Codice</a
+                    >
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="carousel-item">
+            <div class="row">
+              <div class="col-lg-12 col-md-12 col-12">
+                <div class="card mb-3">
+                  <img
+                    src="assets/img/favicon.avif"
+                    class="card-img-top"
+                    alt="Project 1"
+                  />
+                  <div class="card-body">
+                    <h5 class="card-title">Calcolatore BMI</h5>
+                    <p class="card-text">
+                    Un calcolatore che permette, inserendo età, sesso, altezza e peso, di calcolare il tuo BMI e dirti in che condizione ti trovi.
+                    </p>
+                    <a
+                      href="https://andrearuz97.github.io/Calcolatrice-indice-massa-corporea/"
+                      target="_blank"
+                      class="btn btn-success"
+                      >Visualizza Progetto</a
+                    >
+                    <a
+                      href="https://github.com/Andrearuz97/Calcolatrice-indice-massa-corporea"
                       target="_blank"
                       class="btn btn-warning"
                       >Codice</a
