--- a/index.html
+++ b/index.html
@@ -319,8 +319,8 @@
                   <div class="card-body">
                     <h5 class="card-title">Calcolatrice scientifica</h5>
                     <p class="card-text">
-                      Semplice modello di calcolatrice scientifica realizzata con
-                      HTML, CSS & JavaScript
+                      Semplice modello di una calcolatrice scientifica realizzata con
+                      HTML, CSS, JavaScript e un po di Bootstrap.
                     </p>
                     <a
                       href="https://andrearuz97.github.io/Calcolatrice_js/"
@@ -352,7 +352,7 @@
                     <h5 class="card-title">Medium Clone</h5>
                     <p class="card-text">
                       Home page statica del famoso sito Medium, utilizzando solo
-                      HTML, CSS & JS
+                      HTML, CSS & JS. Valido solo per desktop.
                     </p>
                     <a
                       href="https://andrearuz97.github.io/Clone-Medium/"
