--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
               <i class="fa-brands fa-x-twitter fa-lg"></i> <span>Twitter</span>
             </a>
             <a
-              href="assets/file/CV Andrea Ruzittu 2023.pdf"
+              href="assets/file/Andrea Ruzittu CV 2024.pdf"
               class="nav-link"
               target="_blank"
               title="Download cv"
