--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
           aria-expanded="true"
           aria-label="Toggle navigation"
         >
-          <span class="navbar-toggler-icon"></span>
+        <i class="fa-solid fa-bars"></i>
         </button>
 
         <!-- Contenuto della Navbar -->
@@ -72,7 +72,7 @@
               <option value="it">IT</option>
               <option value="en">EN</option>
             </select>
-            <button id="theme-switcher" class="btn">
+            <button id="theme-switcher" >
               <i class="fa-solid fa-moon"></i> <!-- Icona Luna -->
               <i class="fa-solid fa-sun" style="display: none"></i> <!-- Icona Sole -->
             </button>
@@ -377,24 +377,15 @@
           </div>
           <!-- Aggiungi ulteriori slide con una card ciascuna come necessario -->
         </div>
-        <button
-          class="carousel-control-prev"
-          type="button"
-          data-bs-target="#projectCarousel"
-          data-bs-slide="prev"
-        >
-          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <button class="carousel-control-prev" type="button" data-bs-target="#projectCarousel" data-bs-slide="prev">
+          <i class="fas fa-chevron-left"></i>
           <span class="visually-hidden">Previous</span>
         </button>
-        <button
-          class="carousel-control-next"
-          type="button"
-          data-bs-target="#projectCarousel"
-          data-bs-slide="next"
-        >
-          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <button class="carousel-control-next" type="button" data-bs-target="#projectCarousel" data-bs-slide="next">
+          <i class="fas fa-chevron-right"></i>
           <span class="visually-hidden">Next</span>
         </button>
+        
       </div>
     </div>
     <section>
