--- a/index.html
+++ b/index.html
@@ -97,11 +97,11 @@
           <h2 class="my-3" id="fullStack">FULL-STACK DEVELOPER</h2>
         </div>
       </div>
-      <div class="row d-flex justify-content-between">
+      <div class="row d-flex justify-content-between text-center">
         <!-- Sezione "Chi Sono" -->
         <div class="col-md-6">
-          <h2 id="ab" class="text-center">About Me</h2>
-          <p id="aboutMe" class="text-center">
+          <h2>About Me</h2>
+          <p id="aboutMe">
             Ciao, sono Andrea. Dopo una laurea in Economia, ho iniziato a
             lavorare nell'amministrazione di una catena alberghiera, acquisendo
             competenze in gestione e servizio clienti. La mia passione per la
